--- a/dz 4 traffic light/css/style.css
+++ b/dz 4 traffic light/css/style.css
@@ -1,7 +1,5 @@
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
 }
 .container .traffic-light {
   margin: 100px auto 0;
@@ -40,4 +38,7 @@
   border-radius: 50%;
   width: 35px;
   height: 35px;
+}
+.container .rule {
+  text-align: center;
 }
