--- a/dz 4 traffic light/sass/style.sass
+++ b/dz 4 traffic light/sass/style.sass
@@ -1,5 +1,5 @@
 .container
-   display: flex 
+   display: block
    .traffic-light
       margin: 100px auto 0
       width: 70px
@@ -25,3 +25,5 @@
          border-radius: 50%
          width:35px
          height: 35px
+   .rule
+      text-align: center
